kartik ghosh 8 Dec 2022 1:00 PM Social login.

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/prateekbhardwaj/Library/Android/sdk
 flutter.sdk=/Users/prateekbhardwaj/Desktop/Kartik_workspace/flutter_sdk/flutter
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=3
