13-Dec-2022 3:27 Currency fixed.

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/prateekbhardwaj/Library/Android/sdk
-flutter.sdk=/Users/prateekbhardwaj/Desktop/Kartik_workspace/flutter_sdk/flutter
+sdk.dir=/Users/ppp/Library/Android/sdk
+flutter.sdk=/Users/ppp/Documents/flutter sdk/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=3
