--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=/Users/ppp/Library/Android/sdk
 flutter.sdk=/Users/ppp/Documents/flutter sdk/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
-flutter.versionCode=3
+flutter.versionCode=6
