--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+3
+version: 1.0.0+7
 
 
 environment:
@@ -45,11 +45,11 @@ dependencies:
   firebase_auth: ^4.1.5
   firebase_core: ^2.3.0
   cloud_firestore: ^4.1.0
-  firebase_storage: ^11.0.6
+#  firebase_storage: ^11.0.6
   firebase_messaging: ^14.1.3
   dio:
-  file_utils:
-  open_file: ^3.2.1
+#  file_utils:
+#  open_file: ^3.2.1
   permission_handler:
 
   fluttertoast: ^8.0.9
